<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/bg_register"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/bg_register"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <Button
            android:id="@+id/btnback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:text="@string/go_back"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:orientation="horizontal"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register" />

        <EditText
            android:id="@+id/txt_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:ems="10"
            android:hint="@string/requested_by"
            android:inputType="textCapWords"
            android:orientation="horizontal"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register" />

        <Button
            android:id="@+id/btnsetdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/due"
            android:onClick="setDate"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textduedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/input_login_hint" />

        <EditText
            android:id="@+id/txt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine|textLongMessage"
            android:orientation="horizontal"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register" />

        <RadioGroup
            android:id="@+id/radg_sector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_btv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sector1"
                android:textColor="@color/input_register" />

            <CheckBox
                android:id="@+id/check_crew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sector2"
                android:textColor="@color/input_register" />
        </RadioGroup>

        <Button
            android:id="@+id/btnsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
</ScrollView>