<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/btnnewevent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:layout_marginBottom="10dp"
            android:text="@string/newevent"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnviewevents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/view_events"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:text="@string/go_back"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>